--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
@@ -274,6 +274,26 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <Setter Property="Background" Value="Transparent" />
             </Trigger>
 
+            <Trigger Property="IsEditing" Value="True">
+                <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="DataGridCell">
+                            <TextBox
+                                Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content.Text, Mode=TwoWay, UpdateSourceTrigger=Default}"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Padding="0"
+                                BorderThickness="1"
+                                Background="{StaticResource PrimaryLightBrush}"
+                                VerticalContentAlignment="Center"
+                                HorizontalContentAlignment="Center"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+
+
         </Style.Triggers>
     </Style>
 
