#133 - fixed data display format and crush when invalid vacation value

--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/SprintMemberCalendar/SprintMemberCalendarWindow.xaml
@@ -86,7 +86,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
             <DataGridTextColumn
                 Header="Date"
-                Binding="{Binding Date, StringFormat={}{0:yyyy MM dd}}"
+                Binding="{Binding Date, StringFormat={}{0:d}}"
                 CanUserSort="False"
                 IsReadOnly="True" />
 
